# space_shooters

./: .gitignore  CMakeLists.txt
headers/: Background.hpp  Bullet.hpp  BulletManager.hpp  Camera.hpp  Enemy.hpp  EnemyManager.hpp  Entity.hpp  Game.hpp  MyUtils.h  Player.hpp  TextureManager.hpp
src/: Background.cpp  Bullet.cpp  BulletManager.cpp  Camera.cpp  Enemy.cpp  EnemyManager.cpp  Entity.cpp  Game.cpp  Player.cpp  TextureManager.cpp  main.cpp
